<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:weightSum="5">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:background="#FD9ABB"
                android:textColor="#000000"
                android:text="@string/text_scan_continue_times"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                tools:ignore="NestedWeights"/>
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/show_count"
                android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:background="#FD9ABB"
                android:textColor="#000000"
                android:text="@string/text_scan_continue_average_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                tools:ignore="NestedWeights"/>
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/show_average_time"
                android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:background="#FD9ABB"
                android:textColor="#000000"
                android:text="@string/text_scan_continue_times_per_minute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                tools:ignore="NestedWeights"/>
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/show_times_per_minute"
                android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:background="#FD9ABB"
                android:textColor="#000000"
                android:text="@string/text_scan_continue_format"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                tools:ignore="NestedWeights"/>
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/show_format"
                android:layout_weight="5"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
        <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:background="#FD9ABB"
                android:textColor="#000000"
                android:text="@string/text_scan_continue_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                tools:ignore="NestedWeights"/>
        <TextView
                android:maxLength="8"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/show_result"
                android:layout_weight="5"/>
    </LinearLayout>

</LinearLayout>